--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "compression-webpack-plugin": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4",
     "react-hot-loader": "^4.12.10",
     "react-jss": "^10.1.1",
     "webpack": "^4.46.0",
