--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "postinstall": "bash postinstall.sh",
     "start": "node --max_old_space_size=460 dist/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps"
+    "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -50,6 +52,10 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@storybook/addon-actions": "^6.1.18",
+    "@storybook/addon-essentials": "^6.1.18",
+    "@storybook/addon-links": "^6.1.18",
+    "@storybook/react": "^6.1.18",
     "babel-loader": "^8.2.2",
     "civil-server": "git+https://github.com/EnCiv/civil-server.git#main",
     "classnames": "^2.2.6",
@@ -59,6 +65,7 @@
     "react-flip-move": "^3.0.4",
     "react-hot-loader": "^4.12.10",
     "react-jss": "^10.1.1",
+    "react-proactive-accordion": "git+https://github.com/ddfridley/react-proactive-accordion.git#functional",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
