--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
     "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
+    "@storybook/addon-essentials": "^6.1.21",
     "@storybook/addon-links": "^6.1.18",
-    "@storybook/react": "^6.1.18",
+    "@storybook/react": "^6.1.21",
     "babel-loader": "^8.2.2",
     "civil-server": "git+https://github.com/EnCiv/civil-server.git#main",
     "classnames": "^2.2.6",
@@ -66,6 +66,7 @@
     "react-hot-loader": "^4.12.10",
     "react-jss": "^10.1.1",
     "react-proactive-accordion": "git+https://github.com/ddfridley/react-proactive-accordion.git#functional",
+    "simple-statistics": "^7.7.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
