--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "svgr": "svgr --icon --filename-case kebab assets/svg --out-dir app/svgr && rm app/svgr/index.js"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
   "homepage": "https://github.com/EnCiv/civil-server-template#readme",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
+    "@svgr/cli": "^5.5.0",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7"
   },
