working with v0.0.10 of civil server

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ cypress/screenshots
 
 #web-components index is auto generated
 app/web-components/index.js
+app/data-components/index.js
 
 #less history
 .lesshst
