--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-flip-move": "^3.0.4",
     "react-hot-loader": "^4.12.10",
     "react-jss": "^10.1.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-proactive-accordion": "git+https://github.com/ddfridley/react-proactive-accordion.git#functional",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
