--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "@storybook/addon-links": "^6.1.18",
     "@storybook/react": "^6.1.18",
     "babel-loader": "^8.2.2",
-    "civil-server": "github:EnCiv/civil-server#v0.0.10",
+    "civil-client": "github:EnCiv/civil-client",
+    "civil-server": "github:EnCiv/civil-server#v0.0.11",
     "classnames": "^2.2.6",
     "compression-webpack-plugin": "^7.1.2",
     "isomorphic-mongo-objectid": "^1.0.9",
