--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/cli": "^7.12.10",
     "@svgr/cli": "^5.5.0",
     "concurrently": "^5.3.0",
+    "express": "^4.17.1",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
@@ -60,9 +61,10 @@
     "@storybook/react": "^6.1.18",
     "babel-loader": "^8.2.2",
     "civil-client": "github:EnCiv/civil-client",
-    "civil-server": "github:EnCiv/civil-server#v0.0.11",
+    "civil-server": "github:EnCiv/civil-server#v0.0.12",
     "classnames": "^2.2.6",
     "compression-webpack-plugin": "^7.1.2",
+    "isemail": "^3.2.0",
     "isomorphic-mongo-objectid": "^1.0.9",
     "lodash": "^4.17.21",
     "react": "^16.13.1",
@@ -73,6 +75,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-textarea-autosize": "^8.3.3",
     "shallowequal": "^1.1.0",
+    "superagent": "^6.1.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
