--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unpoll",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "How thousands of people work together to figure out a few questions to ask the candidates, democratically and productively",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "hot-server": "nodemon --inspect dist/start.js",
     "hot-transpile": "babel --watch app --ignore **/__tests__ --out-dir dist --source-maps",
     "packbuild": "webpack --config webpack-prod.config.js",
-    "postinstall": "bash postinstall.sh",
+    "prepare": "bash postinstall.sh",
     "start": "node --max_old_space_size=460 dist/start.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps",
@@ -40,12 +40,6 @@
   "homepage": "https://github.com/EnCiv/unpoll#readme",
   "devDependencies": {
     "@babel/cli": "^7.12.10",
-    "@svgr/cli": "^5.5.0",
-    "concurrently": "^5.3.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7"
-  },
-  "dependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
@@ -55,13 +49,22 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "babel-loader": "^8.2.2",
     "@storybook/addon-actions": "^6.1.18",
     "@storybook/addon-essentials": "^6.1.18",
     "@storybook/addon-links": "^6.1.18",
     "@storybook/react": "^6.1.18",
-    "babel-loader": "^8.2.2",
+    "@svgr/cli": "^5.5.0",
+    "concurrently": "^5.3.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
     "civil-client": "github:EnCiv/civil-client",
-    "civil-server": "github:EnCiv/civil-server#v0.0.12",
+    "civil-server": "github:EnCiv/civil-server",
     "classnames": "^2.2.6",
     "compression-webpack-plugin": "^7.1.2",
     "isemail": "^3.2.0",
@@ -76,13 +79,10 @@
     "react-textarea-autosize": "^8.3.3",
     "shallowequal": "^1.1.0",
     "superagent": "^6.1.0",
-    "use-methods": "github:EnCiv/use-methods",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "use-methods": "github:EnCiv/use-methods"
   },
   "engines": {
-    "node": "~14.x.x",
-    "npm": "~7.17.x"
+    "node": ">=16.x.x",
+    "npm": ">=8.x.x"
   }
 }
