--- a/package.json
+++ b/package.json
@@ -39,42 +39,42 @@
   },
   "homepage": "https://github.com/EnCiv/unpoll#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-transform-react-inline-elements": "^7.12.1",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "babel-loader": "^8.2.2",
-    "@storybook/addon-actions": "^6.1.18",
-    "@storybook/addon-essentials": "^6.1.18",
-    "@storybook/addon-links": "^6.1.18",
-    "@storybook/react": "^6.1.18",
-    "@svgr/cli": "^5.5.0",
-    "concurrently": "^5.3.0",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.5",
+    "@babel/plugin-transform-react-inline-elements": "^7.16.5",
+    "@babel/plugin-transform-regenerator": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@babel/runtime": "^7.16.5",
+    "@storybook/addon-actions": "^6.4.9",
+    "@storybook/addon-essentials": "^6.4.9",
+    "@storybook/addon-links": "^6.4.9",
+    "@storybook/react": "^6.4.9",
+    "@svgr/cli": "^6.1.2",
+    "babel-loader": "^8.2.3",
+    "concurrently": "^6.5.0",
+    "css-loader": "^6.5.1",
+    "express": "^4.17.2",
+    "nodemon": "^2.0.15",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
     "civil-client": "github:EnCiv/civil-client",
     "civil-server": "github:EnCiv/civil-server",
-    "classnames": "^2.2.6",
-    "compression-webpack-plugin": "^7.1.2",
+    "classnames": "^2.3.1",
     "isemail": "^3.2.0",
     "isomorphic-mongo-objectid": "^1.0.9",
     "lodash": "^4.17.21",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-flip-move": "^3.0.4",
-    "react-hot-loader": "^4.12.10",
-    "react-jss": "^10.1.1",
+    "react-hot-loader": "^4.13.0",
+    "react-jss": "^10.9.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-textarea-autosize": "^8.3.3",
     "shallowequal": "^1.1.0",
