--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
-  "presets": [
-    "@babel/preset-react",
-    ["@babel/preset-env", { "targets": { "node": "10" } }]],
+  "presets": ["@babel/preset-react", ["@babel/preset-env", { "targets": { "node": "16" } }]],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-transform-runtime",
