--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
   "description": "How thousands of people work together to figure out a few questions to ask the candidates, democratically and productively",
   "main": "index.js",
   "scripts": {
+    "build-storybook": "build-storybook",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run --headless --browser chrome",
+    "db-up": "start /b mongod --quiet --dbpath ./tmp/db --port 27017",
+    "db-down": "mongo --eval \"db.getSiblingDB('admin').shutdownServer(); quit()\"",
     "dev": "echo \"these delays need to be kept up to date\" && concurrently -k \"npm run hot-transpile\" \"sleep 20 && npm run hot-server\" \"sleep 15 && npm run hot-client\"",
+    "dev-no-inspect": "echo \"these delays need to be kept up to date\" && concurrently -k \"npm run hot-transpile\" \"sleep 20 && npm run hot-server-no-inspect\" \"sleep 15 && npm run hot-client\"",
     "hot-client": "webpack-dev-server --config webpack-dev.config.js --devtool source-map --host 0.0.0.0",
     "hot-server": "nodemon --inspect dist/start.js",
+    "hot-server-no-inspect": "nodemon dist/start.js",
     "hot-transpile": "babel --watch app --ignore **/__tests__ --out-dir dist --source-maps",
+    "mongo:delete-user": "bash -c 'mongo --eval \"db.users.remove({email: \\\"$0\\\"})\"'",
     "packbuild": "webpack --config webpack-prod.config.js",
     "prepare": "bash build.sh",
     "start": "node --max_old_space_size=460 dist/start.js",
-    "test": "jest",
-    "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "svgr": "svgr --icon --filename-case kebab assets/svg --out-dir app/svgr && rm app/svgr/index.js",
+    "test": "jest",
     "test:coverage": "npm test -- --coverage",
     "test:watch": "npm test -- --watch",
-    "cypress": "cypress open",
-    "cypress:headless": "cypress run --headless --browser chrome",
-    "mongo:delete-user": "bash -c 'mongo --eval \"db.users.remove({email: \\\"$0\\\"})\"'",
-    "hot-server-no-inspect": "nodemon dist/start.js",
-    "dev-no-inspect": "echo \"these delays need to be kept up to date\" && concurrently -k \"npm run hot-transpile\" \"sleep 20 && npm run hot-server-no-inspect\" \"sleep 15 && npm run hot-client\""
+    "transpile": "babel app --ignore **/__tests__ --out-dir dist --source-maps"
   },
   "repository": {
     "type": "git",
